# Tamagotchi-Esp32-Project

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
EspnowDriver/: CMakeLists.txt  EspnowDriver.cc
EspnowDriver/include/: EspnowConf.hpp  EspnowDriver.hpp
components/ESPNOWmodule/: CMakeLists.txt  ESPNOWmodule.cc
components/ESPNOWmodule/include/: ESPNOWconf.hpp  ESPNOWmodule.hpp  ESPNOWspec.hpp
components/ESP_Joystick/: CMakeLists.txt  ESP_Joystick.cc
components/ESP_Joystick/include/: ESP_Joystick.hpp
components/ESP_NOW/: espNowModule.cc
components/ESP_NOW/include/: espNowConfigurations.hpp  espNowModule.hpp  espNowStructs.hpp
components/GPIOmodule/: CMakeLists.txt  GPIOmodule.cc
components/GPIOmodule/include/: GPIOconf.hpp  GPIOmodule.hpp
components/Joystick/: CMakeLists.txt  Joystick.cc
components/Joystick/include/: Joystick.hpp
components/RecyclingContainer/include/: RecyclingContainer.hpp
components/RecyclingContainer/test/: RecyclingContainer.cpp
components/SPIDriver/: CMakeLists.txt  SPIDriver.cpp
components/SPIDriver/include/: SPIDriver.hpp  SPIconf.hpp
components/app/ColourProvider/: CMakeLists.txt  ColourProvider.cc
components/app/ColourProvider/include/: ColourProvider.hpp
components/app/Display/include/: Display.hpp
components/app/Event/: CMakeLists.txt
components/app/Event/include/: Event.hpp
components/app/Game/: CMakeLists.txt  Game.cc
components/app/Game/include/: Game.hpp  GameConfig.hpp
components/app/Game/test/: CMakeLists.txt  testGame.cc
components/app/Globals/: CMakeLists.txt  Globals.cc
components/app/Globals/include/: Globals.hpp
components/app/Gomoku/: CMakeLists.txt
components/app/Gomoku/include/: Gomoku.hpp  GomokuBase.hpp  GomokuCommon.hpp  GomokuDrawable.hpp  GomokuTile.hpp
components/app/GomokuNetworking/: CMakeLists.txt  GomokuNetworking.cc  Kconfig.projbuild
components/app/Pet/: CMakeLists.txt
components/app/PetGenerator/: CMakeLists.txt  ColourProvider.cc
components/app/Serializer/: CMakeLists.txt  Serializer.cc
components/app/State/: CMakeLists.txt  EndState.cc  GameHostState.cc  GomokuMakeMoveState.cc  MainMenuState.cc  MiniGameState.cc  NormalPlayerState.cc  StartState.cc  State.cc  StateUtils.cc
components/app/State/Gomoku/: EndGameState.cc  HostDutiesState.cc  MiniGameState.cc  PlayerTurnState.cc  WaitingForTurnState.cc
components/app/State/include/: EndState.hpp  GameHostState.hpp  GomokuMakeMoveState.hpp  GomokuState.hpp  MainMenuState.hpp  MiniGameState.hpp  NormalPlayerState.hpp  StartState.hpp  State.hpp  StateUtils.hpp
components/app/State/include/Gomoku/: EndGameState.hpp  HostDutiesState.hpp  MiniGameState.hpp  PlayerTurnState.hpp  WaitingForTurnState.hpp
components/app/State/test/: CMakeLists.txt  testStateUtils.cc
components/esp/EspGL/: CMakeLists.txt  EspGL.cc  EspGLUtils.cc
components/esp/EspGL/test/: CMakeLists.txt  initializeDisplay.cc  testEspGLBitmap.cc  testEspGLFontLoader.cc  testEspGLShapes.cc  testEspGLText.cc  testEspGLUtils.cc  testPerformance.cc
components/esp/EspGL/test/include/: initializeDisplay.hpp  testEspGLUtils.hpp
components/esp/EspnowDriver/: EspnowDriver.cc
components/esp/GpioDriver/: CMakeLists.txt  GpioDriver.cc
components/esp/Joystick/: CMakeLists.txt  Joystick.cc
components/esp/SPIFFSDriver/: CMakeLists.txt  SPIFFSDriver.cc
components/esp/ST7789Driver/: CMakeLists.txt  ST7789Driver.cc  ST7789Utils.cc
components/esp/ST7789VWDriver/: CMakeLists.txt  st7789vwDriver.cc
components/esp/SpiDriver/: CMakeLists.txt  SpiDriver.cc  SpiDriver.cpp
components/generic/BitmapLoader/: BitmapLoader.cc  CMakeLists.txt
components/generic/RecyclingContainer/: CMakeLists.txt
components/wifi/: CMakeLists.txt  wifiModule.cc
components/wifi/include/: wifiModule.hpp
docs/: 09.09.2021.md  11.09.2021.md  20211007.md  20211012.md  20211026.md  20211028.md  20211117.md  20211218.md  25.09.2021.md
icons/: food.pbm  icons.pbm  love.pbm  play.pbm  poop.pbm
main/: CMakeLists.txt  main.cc
petComponents/: angryEyes.pbm  antennaeEars.pbm  body.pbm  boredFace.pbm  bunnyEars.pbm  catEars.pbm  cuteEyes.pbm  eyes.pbm  floppyEars.pbm  happyFace.pbm  mouseEars.pbm  openEyes.pbm  openFace.pbm  pandaEars.pbm  petComponents.pbm  robotFace.pbm  sadFace.pbm  sleepy.pbm  weirdEyes.pbm  weirdFace.pbm
spiffs/: fullFont.pbm  icons.pbm
test/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old  sdkconfig.txt
test/main/: CMakeLists.txt  main.cc
test/spiffs/: fullFont.pbm  petComponents.pbm
unitTests/: CMakeLists.txt  RecyclingContainerTests.cpp  ST7789UtilsTests.cpp
(+68 files in other folders)
